# db_psu_mipt

./: README.md  create_tables.sql  docker-compose.yaml  example.env  select.sql
additional/: indexes.sql
additional/analysis/: config.py  formatter.sh  generators.py  main.py  pyproject.toml
additional/functions/: 1 (function).sql  2 (function).sql  3 (procedure).sql
additional/triggers/: 1.sql  2.sql  3.sql
additional/views/: 1.sql  2.sql
common/: create_tables.sql  fill.sql
common/select/: 1.sql  10.sql  2.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql  9.sql
