[project]
name = "lovecraft-db-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "crazyhamster310",email = "ruhlyadev.alex@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2 (>=2.9.10,<3.0.0)",
    "faker (>=37.3.0,<38.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "ruff (>=0.11.12,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
